--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,16 +1,16 @@
 # Fat Free CRM
 # Copyright (C) 2008-2009 by Michael Dvorkin
-# 
+#
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU Affero General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http:#www.gnu.org/licenses/>.
 #------------------------------------------------------------------------------
@@ -48,7 +48,7 @@
 ]
 
 # Default locale is American English.
-:locale: "en-US"
+:locale: "zh-CN"
 
 # The following setting controls user signup. Possible values are:
 #   :allowed        -- users can sign up and use the system once they have registered.
